Update title and enhance HTML structure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vamsi Demo</title>
+  <title>Vamsi Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello Vamsi </h1>
-  <p>This is my first hosted project.</p>
+
+<nav>
+  <h2>Vamsi</h2>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+<section class="hero">
+  <h1>Hello, I'm Vamsi 👋</h1>
+  <p>Frontend Developer | Learner | Cloud Enthusiast</p>
+</section>
+
+<footer>
+  <p>© 2026 Vamsi. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
