Remove emoji from hero section heading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </nav>
 
 <section class="hero">
-  <h1>Hello, I'm Vamsi 👋</h1>
+  <h1>Hello, I'm Vamsi </h1>
   <p>Frontend Developer | Learner | Cloud Enthusiast</p>
 </section>
 
