--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login - Cloud Portfolio</title>
+  <title>Cloud Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="login-box">
-  <h2>Login to Cloud Portfolio </h2>
-  <input type="text" id="username" placeholder="Enter Username"><br><br>
-  <input type="password" id="password" placeholder="Enter Password"><br><br>
-  <button onclick="login()">Login</button>
-  <p id="error" style="color:red;"></p>
+<div class="overlay">
+  <div class="login-box">
+    <h2>Cloud Login ☁️</h2>
+    <input type="text" placeholder="Username"><br>
+    <input type="password" placeholder="Password"><br>
+    <button>Login</button>
+  </div>
 </div>
 
-<script src="script.js"></script>
 </body>
 </html>
