--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 
 <div class="overlay">
   <div class="login-box">
-    <h2>Cloud Login ☁️</h2>
-    <input type="text" placeholder="Username"><br>
-    <input type="password" placeholder="Password"><br>
-    <button>Login</button>
+    <h2>Cloud Login </h2>
+    <input type="text" id="username" placeholder="Username"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="login()">Login</button>
   </div>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
