Change title and add music player section
Updated the title and replaced the navigation with a music player section featuring multiple songs.

--- a/home.html
+++ b/home.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vamsi Portfolio</title>
+  <title>Cloud Music</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-  <h2>Vamsi</h2>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+<div class="music-container">
+  <h1>Cloud Music Player 🎵</h1>
 
-<section class="hero">
-  <h1>Hello, I'm Vamsi </h1>
-  <p>Frontend Developer | Learner | Cloud Enthusiast</p>
-</section>
+  <div class="song">
+    <p>Song 1</p>
+    <audio controls>
+      <source src="song1.mp3" type="audio/mpeg">
+    </audio>
+  </div>
 
-<footer>
-  <p>© 2026 Vamsi. All rights reserved.</p>
-</footer>
+  <div class="song">
+    <p>Song 2</p>
+    <audio controls>
+      <source src="song2.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="song">
+    <p>Song 3</p>
+    <audio controls>
+      <source src="song3.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+</div>
 
 </body>
 </html>
