Update music player songs and sources

--- a/home.html
+++ b/home.html
@@ -6,30 +6,20 @@
 </head>
 <body>
 
-<div class="music-container">
-  <h1>Cloud Music Player 🎵</h1>
+<h1>Cloud Music Player 🎵</h1>
 
-  <div class="song">
-    <p>Song 1</p>
-    <audio controls>
-      <source src="song1.mp3" type="audio/mpeg">
-    </audio>
-  </div>
+<div class="song">
+  <p>Sample Song 1</p>
+  <audio controls>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+  </audio>
+</div>
 
-  <div class="song">
-    <p>Song 2</p>
-    <audio controls>
-      <source src="song2.mp3" type="audio/mpeg">
-    </audio>
-  </div>
-
-  <div class="song">
-    <p>Song 3</p>
-    <audio controls>
-      <source src="song3.mp3" type="audio/mpeg">
-    </audio>
-  </div>
-
+<div class="song">
+  <p>Sample Song 2</p>
+  <audio controls>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 </body>
