Refactor song elements into song-card divs

--- a/home.html
+++ b/home.html
@@ -6,20 +6,23 @@
 </head>
 <body>
 
-<h1>Cloud Music Player 🎵</h1>
+<div class="music-wrapper">
+  <h1>Cloud Music Player </h1>
 
-<div class="song">
-  <p>Sample Song 1</p>
-  <audio controls>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
-</div>
+  <div class="song-card">
+    <p>Sample Song 1</p>
+    <audio controls>
+      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    </audio>
+  </div>
 
-<div class="song">
-  <p>Sample Song 2</p>
-  <audio controls>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
-  </audio>
+  <div class="song-card">
+    <p>Sample Song 2</p>
+    <audio controls>
+      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
 </div>
 
 </body>
